Preventing scrollbars from showing up on body & html. Closes #48

--- a/biomixer/src/org/thechiselgroup/biomixer/public/css/choosel.css
+++ b/biomixer/src/org/thechiselgroup/biomixer/public/css/choosel.css
@@ -1,3 +1,10 @@
+/**
+ * No scrollbars on body.
+ */
+body, html {
+	overflow: hidden;
+}
+
 /*
  * Focus reset: no outlines around focused elements anymore - these
  * need to be defined manually.
